# mcp_cppcheck

./: .gitignore  README.md  REQUIREMENTS.md  note.md  note.txt  pyproject.toml  test_local.py
src/mcp_cppcheck/: __init__.py  __main__.py  cppcheck_runner.py  project_detector.py  server.py
